--- a/index.html
+++ b/index.html
@@ -5,34 +5,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Library of Congress</title>
-    <link type="style" src="./assets/styles/reset.css">
+    <link rel="stylesheet" href="./assets/styles/reset.css">
     <!-- Bootstrap Link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link type="style" src="./assets/styles/style.css">
+    <link rel="stylesheet" href="./assets/styles/style.css">
 </head>
 
 <body>
-    <section id="search-box">
-        <h1>Library of Congress Search</h1>
-        <!-- Form with a search bar, dropdown menu, and submit button -->
-        <form id="search-form">
-            <input id="search-form" type="text" placeholder="Search">
-            <select id="format-input">
-                <option disabled selected>select a format</option>
-                <option>Maps</option>
-                <option>Audio</option>
-                <option>Photos</option>
-                <option>Manuscripts</option>
-                <option>Newspapers</option>
-                <option>Film and Videos</option>
-                <option>Notated Music</option>
-                <option>Websites</option>
-                
-            </select>
-            <button>Submit</button>
+    <div id="search-box">
+        <div id="search-form-container" class="container text-center p-5">
+            <h1 class="text-light">Library of Congress Search</h1>
+            <!-- Form with a search bar, dropdown menu, and submit button -->
+            <form id="form-container" class="container">
+                <input id="search-input" type="text" placeholder="Search" class="col-12 my-1">
+                <select id="format-input" class="col-12 my-1">
+                    <option disabled selected>select a format</option>
+                    <option>Maps</option>
+                    <option>Audio</option>
+                    <option>Photos</option>
+                    <option>Manuscripts</option>
+                    <option>Newspapers</option>
+                    <option>Film and Videos</option>
+                    <option>Notated Music</option>
+                    <option>Websites</option>
+
+                </select>
+                <button class="col-12 my-1">Submit</button>
+            </form>
         </div>
-        </form>
+    </div>
+
     </section>
     <!-- Bootstrap Link -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
