Added values to the options so the value selected can be used in the parameters of the url. Added a function to go to new page on submit.

--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
             <form id="form-container" class="container">
                 <input id="search-input" type="text" placeholder="Search" class="col-12 my-1">
                 <select id="format-input" class="col-12 my-1">
-                    <option disabled selected>select a format</option>
-                    <option>Maps</option>
-                    <option>Audio</option>
-                    <option>Photos</option>
-                    <option>Manuscripts</option>
-                    <option>Newspapers</option>
-                    <option>Film and Videos</option>
-                    <option>Notated Music</option>
-                    <option>Websites</option>
+                    <option value="" disabled selected>Select a format...</option>
+                    <option value="maps">Maps</option>
+                    <option value="audio">Audio</option>
+                    <option value="photos">Photos</option>
+                    <option value="manuscripts">Manuscripts</option>
+                    <option value="newspapers">Newspapers</option>
+                    <option value="film-and-videos">Film and Videos</option>
+                    <option value="notated-music">Notated Music</option>
+                    <option value="websites">Websites</option>
 
                 </select>
                 <button class="col-12 my-1">Submit</button>
