--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap Link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/styles/style.css">
+    <link rel="stylesheet" href="./assets/styles/index-style.css">
 </head>
 
 <body>
@@ -20,6 +20,7 @@
             <form id="form-container" class="container">
                 <input id="search-input" type="text" placeholder="Search" class="col-12 my-1">
                 <select id="format-input" class="col-12 my-1">
+                    <!-- Value will be submited with the form. -->
                     <option value="" disabled selected>Select a format...</option>
                     <option value="maps">Maps</option>
                     <option value="audio">Audio</option>
