--- a/search-index.html
+++ b/search-index.html
@@ -5,15 +5,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search Page</title>
-    <link type="style" href="./assets/styles/reset.css">
+    <link rel="stylesheet" href="./assets/styles/reset.css">
     <!-- Bootstrap Link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link type="style" href="./assets/styles/style.css">
+    <link rel="stylesheet" href="./assets/styles/search-index-style.css">
 </head>
 
-<body>
-    <h1>This is the results page</h1>
+<body >
+    <!-- Copied from the index.html -->
+    <div id="search-box">
+        <div id="search-form-container" class="container text-center p-5">
+            <h1 class="text-light">Library of Congress Search</h1>
+            <!-- Form with a search bar, dropdown menu, and submit button -->
+            <form id="form-container" class="container">
+                <input id="search-input" type="text" placeholder="Search" class="col-12 my-1">
+                <select id="format-input" class="col-12 my-1">
+                    <!-- Value will be submited with the form. -->
+                    <option value="" disabled selected>Select a format...</option>
+                    <option value="maps">Maps</option>
+                    <option value="audio">Audio</option>
+                    <option value="photos">Photos</option>
+                    <option value="manuscripts">Manuscripts</option>
+                    <option value="newspapers">Newspapers</option>
+                    <option value="film-and-videos">Film and Videos</option>
+                    <option value="notated-music">Notated Music</option>
+                    <option value="websites">Websites</option>
+
+                </select>
+                <button class="col-12 my-1">Submit</button>
+            </form>
+            <a href="./index.html" class="btn btn-block btn-danger">&larr; Go back.</a>
+        </div>
+    </div>
+    <div>
+        <h2>Showing results for <span id="result-text"></span></h2>
+        <div id="result-content"></div>
+    </div>
+
 
     <!-- Bootstrap Link -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
